fix fotn awesome issue

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="weather app for herolo"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="./all.css">
     <title>React App</title>
   </head>
   <body>
